--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>2.8.4</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.processing/core -->
+        <dependency>
+            <groupId>org.processing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+
     </dependencies>
 
     
